--- a/src/main/resources/templates/gacha.html
+++ b/src/main/resources/templates/gacha.html
@@ -55,6 +55,7 @@
       <p><span class="number">+[[${number}]]</span> <span th:text="${unit}"></span></p>
       <p th:text="${comment}" class="comment"></p>
     </div>
+    <p class="back_btn"><a th:href="@{/}">戻る</a></p>
   </div>
   <footer>
     <small>Copyright 2024 TRECORD</small>
