--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 	<header>
 		<div class="inner">
 			<h1>
-				<a th:href="@{/ }" class="logo"><img th:src="@{images/ttl_logo.png}"></a>
+				<a th:href="@{/ }" class="logo"><img th:src="@{/images/ttl_logo.png}"></a>
 			</h1>
 			<nav class="navigation">
 				<ul role='list'>
