--- a/src/main/resources/templates/bodyCondition.html
+++ b/src/main/resources/templates/bodyCondition.html
@@ -13,17 +13,32 @@
 </head>
 <body>
 	<h1>体重登録</h1>
-	<form action="" method="post" th:object="${weightBmi}">
-		<p>日付：
-			<input type="date" th:field="*{date}" />
-		</p>
-		<p>体重：
-			<input type="text" th:field="*{userWeight}" />
-			kg
-		</p>
+	<form action="" method="post" enctype="multipart/form-data">
+		<th:block th:object="${weightBmi}">
+			<p>日付：
+				<input type="date" th:field="*{date}" />
+			</p>
+			<p>体重：
+				<input type="text" th:field="*{userWeight}" />
+				kg
+			</p>
+		</th:block>	
 		
-		<p><input type="submit" th:value="BMIを計算する" /></p>
+		<th:block th:object="${image}">
+			<p>画像を選択してください</p>
+		
+				<input type="file" name="upload" />
+
+				<p>[[${msg}]]</p>
+
+				<p>
+					今日の一言： <input type="text" th:field="*{memo}" />
+				</p>
+		</th:block>
+		
+		<p><input type="submit" th:value="記録する" /></p>
 	</form>
+	
 	<footer>
 		<small>Copyright 2024 TRECORD</small>
 	</footer>
