--- a/src/main/resources/templates/gacha.html
+++ b/src/main/resources/templates/gacha.html
@@ -43,9 +43,13 @@
           <a th:href="@{/}" class="logo"><img th:src="@{images/ttl_logo.png}"></a>
         </h1>
         <nav class="navigation">
-          <ul role='list'>
-            <li><a th:href="@{/}">TOP</a></li>
+          <ul role='list' th:if="${session.user != null}">
             <li><a th:href="@{/mypage}">マイページ</a></li>
+            <li><a th:href="@{/user/logout}">ログアウト</a></li>
+          </ul>
+          <ul role='list' th:unless="${session.user != null}">
+            <li><a th:href="@{/user/register}">新規会員登録</a></li>
+			<li><a th:href="@{/user/login}">ログイン</a></li>
           </ul>
         </nav>
       </div>
@@ -55,7 +59,8 @@
       <p><span class="number">+[[${number}]]</span> <span th:text="${unit}"></span></p>
       <p th:text="${comment}" class="comment"></p>
     </div>
-    <p class="back_btn"><a th:href="@{/}">戻る</a></p>
+    <p class="back_btn" th:if="${session.user != null}"><a th:href="@{/mypage}">戻る</a></p>
+    <p class="back_btn" th:unless="${session.user != null}"><a th:href="@{/ }">戻る</a></p>
   </div>
   <footer>
     <small>Copyright 2024 TRECORD</small>
