--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,7 +19,11 @@
 					th:src="@{/images/ttl_logo.png}"></a>
 			</h1>
 			<nav class="navigation">
-				<ul role='list'>
+				<ul role='list' th:if="${user.loginId != null}">
+					<li><a th:href="@{/mypage}">マイページ</a></li>
+					<li><a th:href="@{/user/logout}">ログアウト</a></li>
+				</ul>
+				<ul role='list' th:unless="${user.loginId != null}">
 					<li><a th:href="@{/user/register}">新規会員登録</a></li>
 					<li><a th:href="@{/user/login}">ログイン</a></li>
 				</ul>
