--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -39,18 +39,28 @@ img {
 	
 <!-- 	画像表示 -->
 <th:block th:each="image : ${imageList}">
-	<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
 	<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
-	<p><a th:href="@{/edit/{id}(id=${image.imgId})}">編集</a></p>
-	<p><a th:href="@{/delete/{id}(id=${image.imgId})}">削除</a></p>
+	<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
+	<p><a th:href="@{/edit/{id}(id=${image.imgId})}">アルバム編集</a></p>
+<!-- 	<p><a th:href="@{/delete/{id}(id=${image.imgId})}">削除</a></p> -->
 	</th:block>
 	
 	
 <!-- 	筋トレ記録表示 -->
+	<th:block th:each="machineSC, status : ${machineSetCount}" th:object="${machineSC}">
+		<p>------------- 本日[[${status.count}]]回目の記録 --------------</p>
+			<table border="1">
+				<tr><th>日付</th><td>[[*{date}]]</td></tr>
+				<tr><th>筋トレマシン名</th><td>[[*{machineName}]]</td></tr>
+				<tr><th>重量</th><td>[[*{machineWeight}]] kg</td></tr>
+				<tr><th>1セットあたりの回数</th><td>[[*{machineCount}]] 回</td></tr>
+				<tr><th>セット数</th><td>[[*{sets}]] セット</td></tr>
+			</table>
+	</th:block>
+	<p>----------------------------------------------</p>
+		
 	
 	
-	
-
 	
 	</main>
   <footer>
